fix admin panel dark mode

--- a/website-project/public/assets/css/new_admin.css
+++ b/website-project/public/assets/css/new_admin.css
@@ -378,6 +378,13 @@ main table tbody tr:last-child td{
     border: none;
 }
 
+main table tbody tr td:first-child{
+    max-width: 150px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 main a{
     text-align: center;
     display: block;
